tests/ui/fmt/ifmt-bad-format-args.stderr
error: requires at least a format string argument
  --> $DIR/ifmt-bad-format-args.rs:2:5
   |
LL |     format_args!();
   |     ^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `format_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error: format argument must be a string literal
  --> $DIR/ifmt-bad-format-args.rs:3:18
   |
LL |     format_args!(|| {});
   |                  ^^^^^
   |
help: you might be missing a string literal to format with
   |
LL |     format_args!("{}", || {});
   |                  +++++

error: aborting due to 2 previous errors

